--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     <div id="overlay">
         <h2>Information</h2>
-        <select id="monarch" onchange="getData()">
+        <select id="monarch" onchange="loadData()">
             <option id="countGeoffrey" value="countGeoffrey" selected>Count Geoffrey of Anjou</option>
             <option id="dukeHenry" value="dukeHenry">Duke Henry of Anjou</option>
             <option id="edward2" value="edward2">Edward II of England</option>
@@ -81,8 +81,8 @@
         <div type="text" id="displayLocation">Location</div>
         <h3>Date</h3>
         <div type="text" id="displayDate">Date</div>
-        <h3>Notes</h3>
-        <div type="Information" id="displayInformation">Information</div>
+        <!-- <h3>Notes</h3>
+        <div type="Information" id="displayInformation">Information</div> -->
         <div id="slider"></div>
     </div>
     <div id="mapid"></div>
