--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src='https://unpkg.com/@turf/turf@6.3.0/turf.min.js'></script>
     <link href="css/nouislider.css" rel="stylesheet">
     <script src="js/nouislider.js"></script>
     <script src="js/main.js"></script>
@@ -71,7 +70,7 @@
     </div>
     <div id="overlay">
         <h2>Information</h2>
-        <select id="monarch" onchange="loadData()">
+        <select id="monarch" onchange="getData()">
             <option id="countGeoffrey" value="countGeoffrey" selected>Count Geoffrey of Anjou</option>
             <option id="dukeHenry" value="dukeHenry">Duke Henry of Anjou</option>
             <option id="edward2" value="edward2">Edward II of England</option>
