--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Digital Itineraries</title>
 </head>
 
-<body>
+<body onload="getData()">
     <div class="topnav" id="myTopnav">
         <a href="#home">Home</a>
         <div class="dropdown">
