--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div type="text" id="displayDate">Date</div>
         <!-- <h3>Notes</h3>
         <div type="Information" id="displayInformation">Information</div> -->
-        <div id="slider"></div>
+        <div id="slider" class="sliderContainer"></div>
     </div>
     <div id="mapid"></div>
 </body>
