--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body onload="getData()">
     <div class="topnav" id="myTopnav">
-        <a href="#home">Home</a>
+        <a href="index.html">Home</a>
         <div class="dropdown">
             <button class="dropbtn">Norman
                 <i class="fa fa-caret-down"></i>
@@ -64,9 +64,9 @@
                 <a href="#">Edward V</a>
                 <a href="#">Richard III</a>
             </div>
-        </div>
 
-        <a href="#about">About</a>
+        </div>
+        <a href="about.html">About</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="navBar()">&#9776;</a>
     </div>
     <div id="overlay">
