--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
         <div type="text" id="displayDate">Date</div>
         <!-- <h3>Notes</h3>
         <div type="Information" id="displayInformation">Information</div> -->
-        <div id="slider" class="sliderContainer"></div>
+        <div id="slider" class="sliderContainer" value="20"></div>
         <br/>
         <button class="btn btn-run">Run</button>
         <button class="btn btn-stop">Stop</button>
+        <button onclick="myFunction()">Try it</button>
     </div>
     <div id="mapid"></div>
 </body>
