--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
         <div type="Information" id="displayInformation">Information</div> -->
         <div id="slider" class="sliderContainer" value="20"></div>
         <br/>
-        <button class="btn btn-run">Run</button>
-        <button class="btn btn-stop">Stop</button>
+        <button id="play">Play</button>
     </div>
     <div id="mapid"></div>
 </body>
