Added reset function

--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
         <div type="Information" id="displayInformation">Information</div> -->
         <div id="slider" class="sliderContainer" value="20"></div>
         <br/>
+        <button id="play">Play</button>
+        <button id="restart">Restart</button>
         <button id="prev">Previous</button>
         <button id="next">Next</button>
     </div>
