Added reset function

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <button id="restart">Restart</button>
         <button id="prev">Previous</button>
         <button id="next">Next</button>
+        <button id="all">Display All</button>
     </div>
     <div id="mapid"></div>
 </body>
