--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div id="slider" class="sliderContainer" value="20"></div>
         <br/>
         <button id="play">Play</button>
-        <!-- <button id="pause">Pause</button> -->
+        <button id="pause">Pause</button>
         <button id="restart">Restart</button>
         <button id="prev">Previous</button>
         <button id="next">Next</button>
