--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <button id="next">Next</button>
         <button id="all">Display All</button>
     </div>
-    <div id="mapid"></div>
+    <div id="mapid" class="mapid"></div>
     <footer class="page-footer">
         <div class="container">
             <div class="row text-center d-flex justify-content-center pt-5 mb-3">
