--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body onload="getData()">
-    <div class="topnav">
+    <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
         <div class="dropdown">
             <button class="dropbtn">Norman
