--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="js/nouislider.js"></script>
     <script src="js/main.js"></script>
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Digital Itineraries</title>
 </head>
 
@@ -69,10 +70,10 @@
         <a href="about.html">About</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="navBar()">&#9776;</a>
     </div>
-    <div id="overlay">
-        <h2>Legend</h2>
-        <div class="box">
-            <div>
+    <form id="overlay">
+        <!-- <h2>Legend</h2> -->
+        <div class="form-row justify-content-center">
+            <div class="form-group col-md-3">
                 <h3>Monarch</h3>
                 <select id="monarch" onchange="getData()">
             <option id="countGeoffrey" value="countGeoffrey" selected>Count Geoffrey of Anjou</option>
@@ -86,30 +87,33 @@
             <option id="williamTheConqueror" value="williamTheConqueror">William I of England</option>
                 </select>
             </div>
-            <div>
+            <div class="form-group col-md-3">
                 <h3>Location</h3>
                 <p type="text" id="displayLocation">Location</p>
             </div>
-            <div>
+            <div class="form-group col-md-3">
                 <h3>Date</h3>
                 <p type="text" id="displayDate">Date</p>
             </div>
         </div>
         <div id="slider" class="sliderContainer" value="20"></div>
         <br/>
-        <button id="play">Play</button>
-        <button id="pause">Pause</button>
-        <button id="restart">Restart</button>
-        <button id="prev">Previous</button>
-        <button id="next">Next</button>
-        <button id="all">Display All</button>
-    </div>
+        <div class='wrapper text-center'>
+            <div class="btn-group" data-toggle="buttons" role="group" aria-label="button group">
+                <button id="play" class="btn btn-secondary">Play</button>
+                <button id="pause" class="btn btn-secondary">Pause</button>
+                <button id="restart" class="btn btn-secondary">Restart</button>
+                <button id="prev" class="btn btn-secondary">Previous</button>
+                <button id="next" class="btn btn-secondary">Next</button>
+                <button id="all" class="btn btn-secondary">Display All</button>
+            </div>
+        </div>
+    </form>
+
     <div id="mapid" class="mapid"></div>
     <footer>
-        <div class="page-footer">
-            <a href="#">Accessibility Statement</a>
-            <a href="#">Contact Us</a>
-        </div>
+        <a href="#">Accessibility Statement</a>
+        <a href="#">Contact Us</a>
     </footer>
 </body>
 
