--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <a href="about.html">About</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="navBar()">&#9776;</a>
     </div>
-    <form id="overlay">
+    <div id="overlay">
         <!-- <h2>Legend</h2> -->
         <div class="form-row justify-content-center">
             <div class="form-group col-md-3">
@@ -101,14 +101,14 @@
         <div class='wrapper text-center'>
             <div class="btn-group" data-toggle="buttons" role="group" aria-label="button group">
                 <button id="play" class="btn btn-secondary">Play</button>
-                <button id="pause" class="btn btn-secondary">Pause</button>
+                <button type='button' id="pause" class="btn btn-secondary">Pause</button>
                 <button id="restart" class="btn btn-secondary">Restart</button>
                 <button id="prev" class="btn btn-secondary">Previous</button>
                 <button id="next" class="btn btn-secondary">Next</button>
                 <button id="all" class="btn btn-secondary">Display All</button>
             </div>
         </div>
-    </form>
+    </div>
 
     <div id="mapid" class="mapid"></div>
     <footer>
