--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="form-row justify-content-center">
             <div class="form-group col-md-3">
                 <h3>Monarch</h3>
-                <select id="monarch" onchange="getData()">
+                <select id="monarch" onchange="getData();">
             <option id="countGeoffrey" value="countGeoffrey" selected>Count Geoffrey of Anjou</option>
             <option id="dukeHenry" value="dukeHenry">Duke Henry of Anjou</option>
             <option id="edward2" value="edward2">Edward II of England</option>
