--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     </div>
     <div id="overlay">
         <!-- <h2>Legend</h2> -->
-        <div class="form-row justify-content-center">
-            <div class="form-group col-md-3">
+        <div class="row justify-content-center">
+            <div class="col-md-3">
                 <h3>Monarch</h3>
                 <select id="monarch" onchange="getData();">
             <option id="countGeoffrey" value="countGeoffrey" selected>Count Geoffrey of Anjou</option>
@@ -87,13 +87,13 @@
             <option id="williamTheConqueror" value="williamTheConqueror">William I of England</option>
                 </select>
             </div>
-            <div class="form-group col-md-3">
+            <div class="col-md-3">
                 <h3>Location</h3>
-                <p type="text" id="displayLocation">Location</p>
+                <div type="text" id="displayLocation">Location</div>
             </div>
-            <div class="form-group col-md-3">
+            <div class="col-md-3">
                 <h3>Date</h3>
-                <p type="text" id="displayDate">Date</p>
+                <div type="text" id="displayDate">Date</div>
             </div>
         </div>
         <div id="slider" class="sliderContainer" value="20"></div>
@@ -103,6 +103,8 @@
                 <button id="play" class="btn btn-secondary">Play</button>
                 <button type='button' id="pause" class="btn btn-secondary">Pause</button>
                 <button id="restart" class="btn btn-secondary">Restart</button>
+            </div>
+            <div class="btn-group" data-toggle="buttons" role="group" aria-label="button group">
                 <button id="prev" class="btn btn-secondary">Previous</button>
                 <button id="next" class="btn btn-secondary">Next</button>
                 <button id="all" class="btn btn-secondary">Display All</button>
