Added margins to buttons

--- a/index.html
+++ b/index.html
@@ -50,19 +50,18 @@
         </div>
         <div id="slider" class="sliderContainer" value="20"></div>
         <div class='wrapper text-center'>
-            <div class="btn-group" data-toggle="buttons" role="group" aria-label="button group">
+            <div class="btn-group play" data-toggle="buttons" role="group" aria-label="button group">
                 <button id="play" class="btn btn-secondary">Play</button>
                 <button type='button' id="pause" class="btn btn-secondary">Pause</button>
                 <button id="restart" class="btn btn-secondary">Restart</button>
             </div>
-            <div class="btn-group" data-toggle="buttons" role="group" aria-label="button group">
+            <div class="btn-group move" data-toggle="buttons" role="group" aria-label="button group">
                 <button id="prev" class="btn btn-secondary">Previous</button>
                 <button id="next" class="btn btn-secondary">Next</button>
                 <button id="all" class="btn btn-secondary">Display All</button>
             </div>
         </div>
     </div>
-
     <div id="mapid" class="mapid"></div>
     <footer>
         <a href="#">Accessibility Statement</a>
