--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="navBar()">&#9776;</a>
     </div>
 
-    <div id="container">
+    <div class="container-fluid">
         <p>This is the code that was used to scan the documents</p>
         <p>From <a href="https://nanonets.com/blog/ocr-with-tesseract/">https://nanonets.com/blog/ocr-with-tesseract/</a></p>
         <code>
