--- a/data.html
+++ b/data.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
         <a href="#about">About</a>
@@ -19,5 +20,6 @@
     <div id="container">
         <h2>Sources</h2>
         <p>These are the original documents</p>
+    </div>
     </div>
 </body>
