--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="row justify-content-center">
             <div class="col">
                 <h3>Monarch</h3>
-                <select id="monarch" onchange="getData();">
+                <select id="monarch" tabindex="0" onchange="getData();">
             <option id="countGeoffrey" value="countGeoffrey" selected>Count Geoffrey of Anjou</option>
             <option id="dukeHenry" value="dukeHenry">Duke Henry of Anjou</option>
             <option id="edward2" value="edward2">Edward II of England</option>
