--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <option id="edward4" value="edward4">Edward IV of England</option>
             <option id="empressMatilda" value="empressMatilda">Empress Matilda</option>
             <option id="henryFirst" value="henryFirst">Henry I of England</option>
+            <option id="kingJohn" value="kingJohn">John of England</option>
             <option id="richard3" value="richard3">Richard III of England</option>
             <option id="stephen" value="stephen">Stephen of England</option>
             <option id="williamTheConqueror" value="williamTheConqueror">William I of England</option>
