--- a/about.html
+++ b/about.html
@@ -12,7 +12,8 @@
 <body>
     <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
-        <a href="#about">About</a>
+        <a href="sources.html">Sources</a>
+        <a href="about.html">About</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="navBar()">&#9776;</a>
     </div>
 
