--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body onload="getData()">
     <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
+        <a href="sources.html">Sources</a>
         <a href="about.html">About</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="navBar()">&#9776;</a>
     </div>
