Edited sources.html layout

--- a/sources.html
+++ b/sources.html
@@ -23,55 +23,71 @@
             <ul>
                 <li>William I of England</li>
                 <ul>
-                    <li><a href="data/csv/williamTheConqueror.csv" download="henryFirst.csv">Download CSV</a></li>
-                    <li><a href="data/json/williamTheConqueror.json" download>Download GeoJSON</a></li>
+                    <li>
+                        <a href="data/csv/williamTheConqueror.csv" download="henryFirst.csv">Download CSV</a>
+                        <a href="data/json/williamTheConqueror.json" download>Download GeoJSON</a>
+                    </li>
                 </ul>
             </ul>
             <li>Cronne H. A & Davis, R. H. C (eds.), 1968. Regesta Regum Anglo-Normannorum 1066-1154 Volume II. 1st ed. Oxford: Clarendon Press.</li>
             <ul>
                 <li>Henry I</li>
                 <ul>
-                    <li><a href="data/csv/henryFirst.csv" download="henryFirst.csv">Download CSV</a></li>
-                    <li><a href="data/json/henryFirst.json" download>Download GeoJSON</a></li>
+                    <li>
+                        <a href="data/csv/henryFirst.csv" download="henryFirst.csv">Download CSV</a>
+                        <a href="data/json/henryFirst.json" download>Download GeoJSON</a>
+                    </li>
                 </ul>
             </ul>
             <li>Cronne H. A & Davis, R. H. C (eds.), 1968. Regesta Regum Anglo-Normannorum 1066-1154 Volume III. 1st ed. Oxford: Clarendon Press.</li>
             <ul>
                 <li>King Stephen of England</li>
                 <ul>
-                    <li><a href="data/csv/stephen.csv" download="henryFirst.csv">Download CSV</a></li>
-                    <li><a href="data/json/stephen.json" download>Download GeoJSON</a></li>
+                    <li>
+                        <a href="data/csv/stephen.csv" download="henryFirst.csv">Download CSV</a>
+                        <a href="data/json/stephen.json" download>Download GeoJSON</a>
+                    </li>
                 </ul>
                 <li>Empress Matilda</li>
                 <ul>
-                    <li><a href="data/csv/empressMatilda.csv" download="henryFirst.csv">Download CSV</a></li>
-                    <li><a href="data/json/empressMatilda.json" download>Download GeoJSON</a></li>
+                    <li>
+                        <a href="data/csv/empressMatilda.csv" download="henryFirst.csv">Download CSV</a>
+                        <a href="data/json/empressMatilda.json" download>Download GeoJSON</a>
+                    </li>
                 </ul>
                 <li>Count Geoffrey of Anjou</li>
                 <ul>
-                    <li><a href="data/csv/countGeoffrey.csv" download="henryFirst.csv">Download CSV</a></li>
-                    <li><a href="data/json/countGeoffrey.json" download>Download GeoJSON</a></li>
+                    <li>
+                        <a href="data/csv/countGeoffrey.csv" download="henryFirst.csv">Download CSV</a>
+                        <a href="data/json/countGeoffrey.json" download>Download GeoJSON</a>
+                    </li>
                 </ul>
                 <li>Duke Henry of Anjou</li>
                 <ul>
-                    <li><a href="data/csv/williamTheConqueror.csv" download="henryFirst.csv">Download CSV</a></li>
-                    <li><a href="data/json/williamTheConqueror.json" download>Download GeoJSON</a></li>
+                    <li>
+                        <a href="data/csv/williamTheConqueror.csv" download="henryFirst.csv">Download CSV</a>
+                        <a href="data/json/williamTheConqueror.json" download>Download GeoJSON</a>
+                    </li>
                 </ul>
             </ul>
             <li>Edwards, R., 1995. The itinerary of King Richard III, 1483-1485. London: A. Sutton Pub. for the Richard III Society.</li>
             <ul>
                 <li>Richard III of England</li>
                 <ul>
-                    <li><a href="data/csv/Richard3ItineraryBlankRecordsRemoved.csv" download="henryFirst.csv">Download CSV</a></li>
-                    <li><a href="data/json/richard3.json" download>Download GeoJSON</a></li>
+                    <li>
+                        <a href="data/csv/Richard3ItineraryBlankRecordsRemoved.csv" download="henryFirst.csv">Download CSV</a>
+                        <a href="data/json/richard3.json" download>Download GeoJSON</a>
+                    </li>
                 </ul>
             </ul>
             <li>Hardy, T., 1835. A description of the Patent rolls in the Tower of London. London: Printed by G. Eyre and A. Spottiswoode.</li>
             <ul>
                 <li>King John of England</li>
                 <ul>
-                    <li><a href="data/csv/KingJohnItineraryW_OBlanks.csv" download="henryFirst.csv">Download CSV</a></li>
-                    <li><a href="data/json/kingJohn.json" download>Download GeoJSON</a></li>
+                    <li>
+                        <a href="data/csv/KingJohnItineraryW_OBlanks.csv" download="henryFirst.csv">Download CSV</a>
+                        <a href="data/json/kingJohn.json" download>Download GeoJSON</a>
+                    </li>
                 </ul>
             </ul>
             <li>The Full Itinerary of Edward IV by John Ashdown-Hill</li>
@@ -79,16 +95,20 @@
                 <li>Available online <a href="https://www.johnashdownhill.com/johns-blog/2017/3/29/download-the-itinerary-of-edward-iv" target="_blank">here</a></li>
                 <li>Edward IV of England</li>
                 <ul>
-                    <li><a href="data/csv/edward4.csv" download="henryFirst.csv">Download CSV</a></li>
-                    <li><a href="data/json/edward4.json" download>Download GeoJSON</a></li>
+                    <li>
+                        <a href="data/csv/edward4.csv" download="henryFirst.csv">Download CSV</a>
+                        <a href="data/json/edward4.json" download>Download GeoJSON</a>
+                    </li>
                 </ul>
             </ul>
             <li>Hartshorne, C., 1861. The Itinerary of King Edward the Second.</li>
             <ul>
                 <li>Edward II of England</li>
                 <ul>
-                    <li><a href="data/csv/Edward2Itinerary.csv" download="henryFirst.csv">Download CSV</a></li>
-                    <li><a href="data/json/edward2.json" download>Download GeoJSON</a></li>
+                    <li>
+                        <a href="data/csv/Edward2Itinerary.csv" download="henryFirst.csv">Download CSV</a>
+                        <a href="data/json/edward2.json" download>Download GeoJSON</a>
+                    </li>
                 </ul>
             </ul>
 
